--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <div className="row top" style="background-color: #003057; color: white; text-align: center; padding: 1em;">
+      <h1>Video Game Inventory Management Site</h1>
+      <h4>Made by Cortlynd Cox</h4>
+    </div>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/89298276a7.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Video Game Inventory Management</title>
   </head>
-  <body>
+  <body style="background-color:whitesmoke;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
