The great renaming.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <div className="row top" style="background-color: #003057; color: white; text-align: center; padding: 1em;">
-      <h1>Video Game Inventory Management Site</h1>
+      <h1>Big Towne Movie Theatre Site</h1>
       <h4>Made by Cortlynd Cox</h4>
     </div>
     <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/89298276a7.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video Game Inventory Management</title>
+    <title>Big Towne Movie Theatre</title>
   </head>
   <body style="background-color:whitesmoke;">
     <div id="root"></div>
