Finally got purchasing snacks and tickets working as well as viewing the users purchased things. Also made various quality changes and improved the UI/themeing.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <div className="row top" style="background-color: #003057; color: white; text-align: center; padding: 1em;">
-      <h1>Big Towne Movie Theatre Site</h1>
-      <h4>Made by Cortlynd Cox</h4>
+    <div className="row top" style="background-color: #bb1705; color: black; text-align: center; padding: 1em;">
+      <h1>Big Towne Movie Theatre <img src="/popcorn4.svg" style="max-height: 150px;"/></h1>
     </div>
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
